# pytho

./: .gitignore  .gitlab-ci.yml  .gitmodules  docker-compose.yml  manage.py  nginx.Dockerfile  nginx.conf  requirements.txt  uwsgi.ini  web.Dockerfile
api/: apps.py  models.py  tests.py  urls.py  views.py
api/decorators/: __init__.py  alator.py  antevorta.py  regression.py
api/management/commands/: init_coverage.py
api/migrations/: 0026_alter_coverage_unique_together.py  0027_alter_coverage_unique_together.py  0028_delete_realreturns.py
front/: urls.py
front/templates/front/: index.html
game/js/: package.json
game/js/src/components/home/: index.js
game/js/src/components/portfolio/components/builder/: index.js
game/js/src/components/reducers/riskattribution/: index.js
game/js/src/containers/artemis/components/table/: index.js
helpers/alator/: __init__.py  base.py  fixedweight.py
helpers/alator/__tests__/: test_alator.py
helpers/analysis/: __init__.py  drawdown.py  riskattribution.py
helpers/analysis/__tests__/: test_drawdown.py  test_riskattribution.py
helpers/antevorta/: __init__.py  base.py  default.py
helpers/backtest/: fixedweight.py
helpers/panacea/: Cargo.toml
helpers/panacea/src/: lib.rs
helpers/prices/: api.py  data.py  ff.py
helpers/prices/__mocks__/hermes/: daily_price.json  earnings.json  fundamentals.json  holders.json  insider.json  search_equities.json  summary.json
helpers/response/: __init__.py
helpers/rust/: Cargo.toml
helpers/rust/src/: lib.rs
js/src/: index.js
js/src/components/form/: index.js
js/src/components/home/: index.js
js/src/components/portfolio/reducers/portfolio/: index.js
js/src/components/reducers/backtest/: index.js
js/src/components/sidemenu/: index.js
js/src/containers/antevorta/: index.js
js/src/containers/antevorta/components/modelinput/: index.js
js/src/containers/antevorta/components/modelresults/: index.js
js/src/containers/antevorta/reducers/antevorta/: index.js
js/src/containers/aphrodite/: index.js
js/src/containers/athena/: index.js
panacea/: Cargo.toml  pyproject.toml
panacea/src/: lib.rs
panacea/src/calcs/: mod.rs
panacea/src/sim/: alator.rs  antevorta.rs  backtest.rs  common.rs  income.rs  mod.rs
panacea/src/stat/: mod.rs
retirement/: settings.py  urls.py
(+1 files in other folders)
