[package]
name = "panacea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "panacea"
crate-type = ["cdylib"]

[dependencies]
alator = { "branch" = "main", git = "ssh://git@100.108.118.115:14401/calum/alator.git" }
antevorta = { "branch" = "master", git = "ssh://git@100.108.118.115:14401/calum/antevorta.git" }

[dependencies.pyo3]
version = "0.16.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
rand = "0.8.4"
rand_distr="0.4.1"
