[package]
name = "panacea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "panacea"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
antevorta = { "tag" = "v0.0.2", git = "ssh://git@100.108.118.115:14401/calum/antevorta.git" }
alator = { "tag" = "v0.0.2", git = "ssh://git@100.108.118.115:14401/calum/alator.git" }
